# inventory-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  status  tsconfig.app.json  vite.config.ts
src/: App.css  App.jsx  config.ts  i18.ts  main.jsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: category.rs  lib.rs  movement.rs  movement_log.rs  product.rs  product_category.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250423_155544_create_product_table.rs  m20250423_171435_create_category_table.rs  m20250424_015508_create_movements_table.rs  m20250429_203528_create_movements_logs_table.rs  m20250518_202822_create_product_categories_table.rs  m20250518_202822_create_product_category_table.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs
src-tauri/service/src/categories/: mutation.rs  query.rs
src-tauri/service/src/movement_logs/: mutation.rs  query.rs
src-tauri/service/src/movements/: mutation.rs  query.rs
src-tauri/service/src/products/: mutation.rs  query.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: categories.rs  mod.rs  movement_logs.rs  movements.rs  products.rs
src/components/: index.js  index.ts
src/components/Actions/: Action.jsx  Action.tsx  Actions.jsx  Actions.tsx  index.ts  (+1 more)
src/db/: APIClient.ts  BaseClient.js  BaseClient.ts  CategoryClient.js  CategoryClient.ts  DbClient.js  DbClient.ts  Manager.js  Manager.ts  MovementClient.js  MovementClient.ts  ProductClient.js  ProductClient.ts  TauriClient.ts  enum.js
src/hooks/: index.js  index.ts  useConfirmationForm.jsx  useDialog.jsx  useDialogForm.jsx  useFormDialog.jsx  useTimeAge.jsx  useTimeAge.tsx
src/lib/: Notification.js  Notification.ts  ServiceError.js  ValidationError.js  index.js  index.ts
src/providers/: ManagerProvider.jsx  ManagerProvider.tsx  NotificationProvider.jsx  NotificationProvider.tsx  index.ts  types.ts
src/utils/: queryKey.js
src/views/: Home.jsx
(+205 files in other folders)
