[package]
name = "inventory-app"
version = "0.1.0"
description = "Inventory App"
authors = ["sito8943"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inventory_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
sea-orm = "1.1.10"

[workspace]
members = [".", "service", "entity", "migration"]
