[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.10" # sea-orm-migration version
features = [
    # Enable the following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
]