[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
chrono = "0.4.40"

[dependencies.sea-orm]
version = "1.1.10" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
]

[dev-dependencies]
